2006-08-04  Ralf Angeli  <angeli@caeruleus.net>

	* w32fns.c (w32_createwindow): Handle -geometry command line option
	and the geometry settings in the Registry.

2006-08-04  Kenichi Handa  <handa@m17n.org>

	* w32fns.c (w32_query_font): Compare names by ignoring case.

	* xterm.c (x_query_font): Compare names by ignoring case.

2006-08-03  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (w32_menu_show, w32_dialog_show): Call Fsignal to quit
	when no option selected.

2006-08-03  Chong Yidong  <cyd@stupidchicken.com>

	* process.c: Revert last change.

2006-08-01  Kim F. Storm  <storm@cua.dk>

	* process.c (wait_reading_process_output_unwind): New function.
	Restores waiting_for_user_input_p to saved value.
	(wait_reading_process_output): Unwind protect waiting_for_user_input_p
	instead of save/restore old value on stack.

2006-07-30  Thien-Thi Nguyen  <ttn@gnu.org>

	* editfns.c: Undo 2006-06-27 change.

2006-07-29  Eli Zaretskii  <eliz@gnu.org>

	* coding.c (Ffind_operation_coding_system): Revert the change from
	2006-05-29.

	* alloc.c [WINDOWSNT]: Include fcntl.h, to fix last change.

2006-07-28  Richard Stallman  <rms@gnu.org>

	* xfaces.c (lookup_named_face, Fdisplay_supports_face_attributes_p):
	Add conditional aborts for clarity.

	* xdisp.c (update_menu_bar): New arg HOOKS_RUN.  Callers changed.
	Used to avoid running the hooks over and over for each frame.
	(prepare_menu_bars): Pass value from update_menu_bar
	as HOOKS_RUN of next call.

	* keyboard.c (safe_run_hooks_1): Don't crash if Vrun_hooks is nil.

2006-07-28  Kim F. Storm  <storm@cua.dk>

	* alloc.c (valid_pointer_p): New function (from valid_lisp_object_p).
	(valid_lisp_object_p): Use it to check for valid SUBRP obj.

2006-07-26  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (read_char): New arg END_TIME specifying timeout.
	All callers changed.  Turn off echoing if END_TIME is non-NULL.
	(kbd_buffer_get_event): New arg END_TIME.
