@@ -1,3 +1,8 @@
+2006-08-04  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* editfns.c (Fsubst_char_in_region): Redo the setup work after running
+	the before-change-functions since they may have altered the buffer.
+
 2006-08-04  Ralf Angeli  <angeli@caeruleus.net>
 
 	* w32fns.c (w32_createwindow): Handle -geometry command line option
